# fdi-pln-2607

./: README.md
Practica1/: .gitignore  README.md  api_butler.py  borrar_buzon.py  logger_config.py  main.py  main2.py  menu.py  negociacion.py  prompts.py  pyproject.toml  settings.py
Practica3/: fdi-pln2607-p3.py
Practica4/: 2000-h.htm  README.md  buscar_quijote.py  busqueda_semantica.py  documentation.md  embeddings_quijote_nomic-embed-text_latest_tokens_512_128.npz  main.py  pyproject.toml  rag_quijote.py
Practica5/: alice_in_wonderland.txt  main.py  mini_llm.py  pyproject.toml  tokenizer.py
