[project]
name = "practica4"
version = "0.1.0"
description = "Buscador sencillo de pasajes de Don Quijote por terminal"
requires-python = ">=3.14"
dependencies = [
    "nltk",
    "numpy",
    "ollama",
    "rich",
    "spacy",
    "spacy-lookups-data",
    "textual",
]

[project.scripts]
practica4 = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "buscar_quijote", "busqueda_semantica"]
