[project]
name = "fdi-pln-2607-p4"
version = "1.0"
description = "Buscador sencillo de pasajes de Don Quijote por terminal"
readme = "documentation.md"
requires-python = ">=3.12"
dependencies = [
    "nltk",
    "numpy",
    "ollama",
    "rich",
    "spacy",
    "spacy-lookups-data",
    "textual",
]

[project.scripts]
fdi-pln-2607-p4 = "main:main"
practica4 = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "buscar_quijote", "busqueda_semantica", "rag_quijote"]

[tool.setuptools.data-files]
"." = [
    "2000-h.htm",
    "embeddings_quijote_nomic-embed-text_latest_tokens_512_128.npz",
]
